--- a/src/assets/style/global.less
+++ b/src/assets/style/global.less
@@ -8,6 +8,11 @@
 @GColor2:#6a6a6a;
 @GColor3:#b4b4b4;
 @GColor4:#d4d2d6;
+
+@MC1:#8675a9;
+@MC2:#c3aed6;
+@MC3:#efbbcf;
+@MC4:#ffd5cd;
 @mainTop:56px;
 *{
     font-family: Avenir, Helvetica, Arial, sans-serif;
@@ -53,7 +58,133 @@ a:hover {
 a:active {
     text-decoration: none;
 }
-// 主体内容样式
-.main{
-margin-top: 56px;
+.note {
+    > .con {
+      > .box {
+        height: 200px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px dashed @GColor4;
+        .left {
+          width: 70%;
+          > p {
+            font-size: 18px;
+            font-weight: bold;
+          }
+          > .con {
+            margin: 18px 0 25px 0;
+            letter-spacing: 1px;
+            line-height: 28px;
+            display: -webkit-box; /**对象作为伸缩盒子模型展示**/
+            -webkit-box-orient: vertical; /**设置或检索伸缩盒子对象的子元素的排列方式**/
+            -webkit-line-clamp: 2; /**显示的行数**/
+            overflow: hidden; /**隐藏超出的内容**/
+          }
+          > .foot {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            >p{
+              color:@GColor3;
+            }
+          }
+        }
+        .right {
+          width: 25%;
+          height: 80%;
+          // background: crimson;
+          > div {
+            width: 100%;
+            height: 100%;
+            img {
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+            }
+          }
+        }
+      }
+    }
+  }
+// 主内容的公用样式
+.content1{
+    letter-spacing: 1px;
+    width: 80%;
+    margin: @mainTop+20px auto 100px auto;
+    display: flex;
+    justify-content: center;
+    .title {
+        font-size: 20px;
+        margin:5px 0 15px 0;
+        color: @MC1;
+        font-weight: bold;
+    }
+    .mainTop {
+        text-align: center;
+        letter-spacing: 5px;
+        .text {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 20px;
+          position: relative;
+          padding-bottom: 10px;
+          margin-bottom: 30px;
+          .icon {
+            width: 40px;
+            height: 40px;
+            margin-right: 7px;
+          }
+        }
+        .text::before {
+          content: "";
+          width: 170px;
+          height: 1px;
+          background: @MC4;
+          position: absolute;
+          border-radius: 20px;
+          bottom: 0;
+        }
+      }
+}
+// 分为两列的公用样式
+.content2{
+    >.left {
+        // width: 25%;
+        background: white;
+        padding: 10px 20px;
+        margin-right: 10px;
+        >div{
+            border-bottom: 1px dashed @MC2;
+            padding: 10px;
+        }
+        .title{
+            font-size: 16px;
+            background: @MC3;
+            color: white;
+            padding: 2px 8px;
+        }
+    }
+    > .right {
+        padding: 20px;
+        width: 80%;
+        background: white;
+    }
+    >div{
+        padding: 10px;
+    }
+    
+    
+}
+// 仅为两列的公用样式
+
+.content3{
+    flex-direction: column;
+
+    background: white;
+    // border-radius: 20px 20px 0 0;
+    >div{
+        padding: 10px 25px;
+    }
 }
